Creata pagina servizi

--- a/servizi.html
+++ b/servizi.html
@@ -139,15 +139,93 @@
       </div>
     </header>
 
-    <main>
+    <main class="pb-5">
       <section
         class="hero d-flex justify-content-center align-items-center"
         id="hero-home"
       >
         <div class="hero-content text-light text-center">
-          <h1 class="display-1">Oasis</h1>
-          <h2 class="lead">La culla del tuo futuro</h2>
-          <button class="btn btn-primary mt-3">Unisciti a noi</button>
+          <h1 class="visually-hidden">Servizi</h1>
+          <h2 class="h1">I migliori servizi</h2>
+          <p class="lead">
+            Da noi non esistono preoccupazioni. Ti proteggeremo sempre
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <div class="container pt-5">
+          <div class="row gy-5">
+            <div class="col">
+              <div class="card h-100">
+                <img src="img/Image350.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h3 class="card-title">Benessere</h3>
+                  <p class="card-text">
+                    Relax, tranquillità e pace dei sensi. OASIS è la città dove
+                    è impossibile essere tristi e lo dimostriamo con il nostro
+                    innovativo approccio psicologico. Non esistono problemi che
+                    non possano essere risolti da un caldo bagno termale o da
+                    uno dei nostri farmaci all’avanguardia
+                  </p>
+                </div>
+                <div class="card-footer text-end">
+                  <a href="/benessere.html" class="small-caps"
+                    >Scopri i nostri pacchetti
+                    <i class="bi-arrow-right fw-bold"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="img/Image350.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h3 class="card-title">Formazione</h3>
+                  <p class="card-text">
+                    Sperimenta, crea, comunica, ripara... OASIS ha bisogno delle
+                    tue abilità per crescere e ripopolare il Pianeta Terra. Ti
+                    indirizzeremo nella scuola giusta dopo averti sottoposto ad
+                    un test attitudinale per valutare i tuoi punti di forza.
+                  </p>
+                </div>
+                <div class="card-footer text-end">
+                  <a href="/istruzione.html" class="small-caps"
+                    >Scopri le nostre scuole
+                    <i class="bi-arrow-right fw-bold"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container pt-5">
+          <h2 class="text-center">Altri servizi</h2>
+          <div class="row gy-3 pt-4">
+            <div class="col text-center">
+              <img src="img/Image160.png" alt="" />
+              <p>Pulizia dell'aria</p>
+            </div>
+            <div class="col text-center">
+              <img src="img/Image160.png" alt="" />
+              <p>Acqua potabile</p>
+            </div>
+            <div class="col text-center">
+              <img src="img/Image160.png" alt="" />
+              <p>Guardie della diciplina</p>
+            </div>
+            <div class="col text-center">
+              <img src="img/Image160.png" alt="" />
+              <p>Paesaggi naturali</p>
+            </div>
+            <div class="col text-center">
+              <img src="img/Image160.png" alt="" />
+              <p>Cura della prole</p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
