Revert "Variazione card benessere e formazione"
This reverts commit c900ee9f1e5865089cda2e7947dcd9ab4b471113.

commit su branch sbagliato

--- a/servizi.html
+++ b/servizi.html
@@ -155,13 +155,13 @@
 
       <section>
         <div class="container pt-5">
-          <div class="row gy-5 justify-content-around">
-            <div class="col-md d-flex justify-content-center">
-              <div class="h-100">
-                <img src="img/Image350.png" class="img-fluid" alt="..." />
-                <div>
-                  <h3>Benessere</h3>
-                  <p>
+          <div class="row gy-5">
+            <div class="col">
+              <div class="card h-100">
+                <img src="img/Image350.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h3 class="card-title">Benessere</h3>
+                  <p class="card-text">
                     Relax, tranquillità e pace dei sensi. OASIS è la città dove
                     è impossibile essere tristi e lo dimostriamo con il nostro
                     innovativo approccio psicologico. Non esistono problemi che
@@ -169,34 +169,32 @@
                     uno dei nostri farmaci all’avanguardia
                   </p>
                 </div>
-                <a href="/benessere.html" class="small-caps"
-                  >Scopri i nostri pacchetti
-                  <i class="bi-arrow-right fw-bold"></i>
-                </a>
+                <div class="card-footer text-end">
+                  <a href="/benessere.html" class="small-caps"
+                    >Scopri i nostri pacchetti
+                    <i class="bi-arrow-right fw-bold"></i>
+                  </a>
+                </div>
               </div>
             </div>
-
-            <div class="col-md d-flex justify-content-center">
-              <div class="h-100">
-                <img
-                  style="object-fit: cover"
-                  src="img/Image350.png"
-                  class="img-fluid"
-                  alt="..."
-                />
-                <div>
-                  <h3>Formazione</h3>
-                  <p>
+            <div class="col">
+              <div class="card h-100">
+                <img src="img/Image350.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h3 class="card-title">Formazione</h3>
+                  <p class="card-text">
                     Sperimenta, crea, comunica, ripara... OASIS ha bisogno delle
                     tue abilità per crescere e ripopolare il Pianeta Terra. Ti
                     indirizzeremo nella scuola giusta dopo averti sottoposto ad
                     un test attitudinale per valutare i tuoi punti di forza.
                   </p>
                 </div>
-                <a href="/istruzione.html" class="small-caps"
-                  >Scopri le nostre scuole
-                  <i class="bi-arrow-right fw-bold"></i>
-                </a>
+                <div class="card-footer text-end">
+                  <a href="/istruzione.html" class="small-caps"
+                    >Scopri le nostre scuole
+                    <i class="bi-arrow-right fw-bold"></i>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
