Cambiato nome da quartieri a storia e aggiunta versione 2

--- a/eventi.html
+++ b/eventi.html
@@ -101,7 +101,7 @@
                 <a href="descrizione.html" class="nav-link">Descrizione</a>
               </li>
               <li class="nav-item mx-lg-3">
-                <a href="quartieri.html" class="nav-link">Quartieri</a>
+                <a href="storia.html" class="nav-link">Storia</a>
               </li>
               <li class="nav-item mx-lg-3 dropdown">
                 <a
@@ -210,9 +210,7 @@
                     </p>
                     <div><i class="bi-pin-angle-fill"></i> Via Monet, 3</div>
                     <div><i class="bi-watch"></i> 10:00 - 20:00</div>
-                    <button class="btn btn-primary mt-3 type="button"
-                      data-bs-toggle="modal"
-                      data-bs-target="#mymodal"">Prenota</button>
+                    <button class="btn btn-primary mt-3" type="button" data-bs-toggle="modal" data-bs-target="#mymodal">Prenota</button>
                   </div>
                 </div>
               </div>
@@ -236,9 +234,9 @@
                     </p>
                     <div><i class="bi-pin-angle-fill"></i> Via Zenzero, 14</div>
                     <div><i class="bi-watch"></i> 11:00</div>
-                    <button class="btn btn-primary mt-3 type="button"
+                    <button class="btn btn-primary mt-3" type="button"
                       data-bs-toggle="modal"
-                      data-bs-target="#mymodal"">Prenota</button>
+                      data-bs-target="#mymodal">Prenota</button>
                   </div>
                 </div>
               </div>
@@ -262,9 +260,9 @@
                     </p>
                     <div><i class="bi-pin-angle-fill"></i> Via Abba, 21</div>
                     <div><i class="bi-watch"></i> 20:00 - 00:00</div>
-                    <button class="btn btn-primary mt-3 type="button"
+                    <button class="btn btn-primary mt-3" type="button"
                       data-bs-toggle="modal"
-                      data-bs-target="#mymodal"">Prenota</button>
+                      data-bs-target="#mymodal">Prenota</button>
                   </div>
                 </div>
               </div>
@@ -288,9 +286,9 @@
                     </p>
                     <div><i class="bi-pin-angle-fill"></i> Via Giallo, 10</div>
                     <div><i class="bi-watch"></i> 11:00</div>
-                    <button class="btn btn-primary mt-3 type="button"
+                    <button class="btn btn-primary mt-3" type="button"
                       data-bs-toggle="modal"
-                      data-bs-target="#mymodal"">Prenota</button>
+                      data-bs-target="#mymodal">Prenota</button>
                   </div>
                 </div>
               </div>
@@ -314,9 +312,9 @@
                     </p>
                     <div><i class="bi-pin-angle-fill"></i> Via Monti</div>
                     <div><i class="bi-watch"></i> 24h</div>
-                    <button class="btn btn-primary mt-3 type="button"
+                    <button class="btn btn-primary mt-3" type="button"
                       data-bs-toggle="modal"
-                      data-bs-target="#mymodal"">Prenota</button>
+                      data-bs-target="#mymodal">Prenota</button>
                   </div>
                 </div>
               </div>
@@ -405,7 +403,7 @@
       >
         <a class="nav-link" href="/index.html">Home</a>
         <a class="nav-link" href="/descrizione.html">Descrizione</a>
-        <a class="nav-link" href="/quartieri.html">Quartieri</a>
+        <a class="nav-link" href="/storia.html">Storia</a>
         <a class="nav-link" href="/servizi.html">Servizi</a>
         <a class="nav-link" href="/eventi.html">Eventi</a>
         <a class="nav-link" href="/unisciti.html">Unisciti a noi</a>
