--- a/istruzione.html
+++ b/istruzione.html
@@ -101,7 +101,7 @@
                 <a href="descrizione.html" class="nav-link">Descrizione</a>
               </li>
               <li class="nav-item mx-lg-3">
-                <a href="quartieri.html" class="nav-link">Quartieri</a>
+                <a href="storia.html" class="nav-link">Storia</a>
               </li>
               <li class="nav-item mx-lg-3 dropdown">
                 <a
@@ -199,7 +199,7 @@
       >
         <a class="nav-link" href="/index.html">Home</a>
         <a class="nav-link" href="/descrizione.html">Descrizione</a>
-        <a class="nav-link" href="/quartieri.html">Quartieri</a>
+        <a class="nav-link" href="/storia.html">Storia</a>
         <a class="nav-link" href="/servizi.html">Servizi</a>
         <a class="nav-link" href="/eventi.html">Eventi</a>
         <a class="nav-link" href="/unisciti.html">Unisciti a noi</a>
