--- a/storia.html
+++ b/storia.html
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Oasis | Homepage</title>
+    <title>Oasis | Storia</title>
   </head>
   <body>
     <header
@@ -101,7 +101,7 @@
                 <a href="descrizione.html" class="nav-link">Descrizione</a>
               </li>
               <li class="nav-item mx-lg-3">
-                <a href="quartieri.html" class="nav-link active">Quartieri</a>
+                <a href="storia.html" class="nav-link active">Storia</a>
               </li>
               <li class="nav-item mx-lg-3 dropdown">
                 <a
@@ -137,15 +137,171 @@
       </div>
     </header>
 
-    <main>
+    <main class="mb-5">
       <section
-        class="hero d-flex justify-content-center align-items-center"
-        id="hero-home"
+        class="hero d-flex align-items-center justify-content-start"
+        id="hero-storia"
       >
-        <div class="hero-content text-light text-center">
-          <h1 class="display-1">Oasis</h1>
-          <h2 class="lead">La culla del tuo futuro</h2>
-          <button class="btn btn-primary mt-3">Unisciti a noi</button>
+        <div class="hero-content bg-dark p-4 ps-5 text-light w-75">
+          <h1 class="h2">La nostra storia</h1>
+          <h2 class="lead">
+            Scopri la genesi dell’unica città che sopravviverà al tempo
+          </h2>
+        </div>
+      </section>
+
+      <section>
+        <div class="container pt-5">
+          <div class="row align-items-md-center">
+            <div class="col-md-5 text-center">
+              <img class="img-fluid" src="img/Image350.png" alt="" />
+            </div>
+            <div
+              class="col-md-2 pt-5 pt-md-0 align-self-stretch year-container"
+            >
+              <h2 class="story-year">2020</h2>
+              <!-- <div class="d-none d-md-block text-center">
+                <img class="img-fluid" src="img/Line.svg" alt="" />
+              </div> -->
+            </div>
+            <div class="col-md-5">
+              <h3 class="h2">Preludio</h3>
+              <p>
+                Anno 2020, inizia la pandemia da COVID-19. Mentre le attenzioni
+                del mondo sono rivolte alla gestione dei contagi, un piccolo
+                gruppo di scenziati fa una scoperta spaventosa. Il riscaldamento
+                globale sta accelerando e le previsioni si avvereranno in
+                anticipo di almeno dieci anni. Alcuni imprenditori illuminati
+                iniziano a discutere di un nuovo progetto edilizio. La chiave di
+                tutto è
+                <strong>l’acqua.</strong>
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container pt-5">
+          <div class="row flex-md-row-reverse align-items-md-center">
+            <div class="col-md-5 text-center">
+              <img class="img-fluid" src="img/Image350.png" alt="" />
+            </div>
+            <div
+              class="col-md-2 pt-5 pt-md-0 align-self-stretch year-container"
+            >
+              <h2 class="story-year">2030</h2>
+              <!-- <div class="d-none d-md-block text-center">
+                <img class="img-fluid" src="img/Line.svg" alt="" />
+              </div> -->
+            </div>
+            <div class="col-md-5">
+              <h3 class="h2">Il progetto OASIS</h3>
+              <p>
+                Le <strong>previsioni scientifiche</strong> sul riscaldamento
+                globale si avverano in anticipo. Le
+                <strong>temperature globali</strong> si alzano di 3 gradi
+                centigradi e il surriscaldamento è irreversibile. Il processo di
+                desertificazione accelera ed è sempre più difficile produrre
+                cibo. Gruppi di persone migrano vicino alle poche fonti d'acqua
+                rimaste, causando non pochi conflitti - spesso anche armati. La
+                progettazione della città è completata, il sito di costruzione è
+                stato individuato in un oasi del deserto occidentale. Iniziano i
+                lavori di realizzazione di Oasis.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container pt-5">
+          <div class="row align-items-md-center">
+            <div class="col-md-5 text-center">
+              <img class="img-fluid" src="img/Image350.png" alt="" />
+            </div>
+            <div
+              class="col-md-2 pt-5 pt-md-0 align-self-stretch year-container"
+            >
+              <h2 class="story-year">2040</h2>
+              <!-- <div class="d-none d-md-block text-center">
+                <img class="img-fluid" src="img/Line.svg" alt="" />
+              </div> -->
+            </div>
+            <div class="col-md-5">
+              <h3 class="h2">OASIS prende forma</h3>
+              <p>
+                Oasis è ultimata. In un mondo devastato da guerre Oasis è uno
+                dei pochi luoghi al mondo dove regna la pace. C’è crescita
+                economica, e durante questi anni vengono costruite le strutture
+                che porteranno alla nascita del servizio benessere.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container pt-5">
+          <div class="row flex-md-row-reverse align-items-md-center">
+            <div class="col-md-5 text-center">
+              <img class="img-fluid" src="img/Image350.png" alt="" />
+            </div>
+            <div
+              class="col-md-2 pt-5 pt-md-0 align-self-stretch year-container"
+            >
+              <h2 class="story-year text-start">2050</h2>
+              <!-- <div class="d-none d-md-block text-center">
+                <img class="img-fluid" src="img/Line.svg" alt="" />
+              </div> -->
+            </div>
+            <div class="col-md-5">
+              <h3 class="h2">Espansione</h3>
+              <p>
+                La crescita non dura però a lungo ed è necessario espandersi.
+                Una metropoli abbandonata a pochi chilometri di distanza sarà il
+                secondo nucleo di Oasis. Con un maggior numero di residenze sarà
+                più facile reclutare nuovi cittadini che lavorino per far
+                crescere Oasis. Nasce il servizio formazione per plasmare le
+                competenze necessarie.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container pt-5">
+          <div class="row flex-md-row align-items-md-center">
+            <div class="col-md-5 text-center">
+              <img class="img-fluid" src="img/Image350.png" alt="" />
+            </div>
+            <div
+              class="col-md-2 pt-5 pt-md-0 align-self-stretch year-container"
+            >
+              <!--
+                md-stretch
+                d-md-flex
+                flex-md-column
+                align-items-md-center
+                justify-content-between
+                -->
+              <h2 class="story-year text-start">Oggi</h2>
+              <!-- <div class="d-none d-md-block text-center">
+                <img class="img-fluid" src="img/Line.svg" alt="" />
+              </div> -->
+            </div>
+            <div class="col-md-5">
+              <h3 class="h2">Il sogno dei fondatori continua ad essere vivo</h3>
+              <p>
+                Negli anni l’amministrazione ha messo in piedi una struttura
+                organizzativa centralizzata per coordinare i lavori e fatto
+                costruire un quartier generale che è anche la residenza del
+                sindaco. I cittadini sono felici e non immaginano una vita fuori
+                da Oasis.
+              </p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
@@ -199,7 +355,7 @@
       >
         <a class="nav-link" href="/index.html">Home</a>
         <a class="nav-link" href="/descrizione.html">Descrizione</a>
-        <a class="nav-link" href="/quartieri.html">Quartieri</a>
+        <a class="nav-link" href="/storia.html">Storia</a>
         <a class="nav-link" href="/servizi.html">Servizi</a>
         <a class="nav-link" href="/eventi.html">Eventi</a>
         <a class="nav-link" href="/unisciti.html">Unisciti a noi</a>
