--- a/descrizione.html
+++ b/descrizione.html
@@ -103,7 +103,7 @@
                 >
               </li>
               <li class="nav-item mx-lg-3">
-                <a href="quartieri.html" class="nav-link">Quartieri</a>
+                <a href="storia.html" class="nav-link">Storia</a>
               </li>
               <li class="nav-item mx-lg-3 dropdown">
                 <a
@@ -139,179 +139,7 @@
       </div>
     </header>
 
-    <main>
-      <section
-        class="hero d-flex justify-content-center align-items-center"
-        id="hero-home"
-      >
-        <div class="hero-content text-light text-center">
-          <h1 class="visually-hidden">Descrizione</h1>
-          <h2 class="h1">
-            Quando la speranza muore, solo un’oasi può riportarti alla vita
-          </h2>
-          <h2 class="lead">Scopri la nostra storia</h2>
-        </div>
-      </section>
-
-      <section>
-        <div class="container py-5">
-          <div class="row align-items-md-center">
-            <div class="col-md-5 text-center">
-              <img class="img-fluid" src="img/Image350.png" alt="" />
-            </div>
-            <div
-              class="
-                col-md-2
-                pt-5 pt-md-0
-                align-self-md-stretch
-                d-md-flex
-                flex-md-column
-                align-items-md-center
-                justify-content-between
-              "
-            >
-              <h2>2020</h2>
-              <div class="d-none d-md-block text-center">
-                <img class="img-fluid" src="img/Line.svg" alt="" />
-              </div>
-            </div>
-            <div class="col-md-5">
-              <h3 class="h2">
-                Inizio della pandemia e tracollo della popolazione
-              </h3>
-              <p>
-                L'anno in cui tutto ha inizio: a febbraio esplode la pandemia da
-                Covid-19, e la popolazione inizia a diminuire. A nulla serve il
-                vaccino: le varianti sono infinite e il virus si diffonde
-                rapidamente grazie all'inquinamento atmosferico. Alcuni studiosi
-                illuminati iniziano ad implementare strategie di resilienza.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section>
-        <div class="container py-5">
-          <div class="row flex-md-row-reverse align-items-md-center">
-            <div class="col-md-5 text-center">
-              <img class="img-fluid" src="img/Image350.png" alt="" />
-            </div>
-            <div
-              class="
-                col-md-2
-                pt-5 pt-md-0
-                align-self-md-stretch
-                d-md-flex
-                flex-md-column
-                align-items-md-center
-                justify-content-between
-              "
-            >
-              <h2>2030</h2>
-              <div class="d-none d-md-block text-center">
-                <img class="img-fluid" src="img/Line.svg" alt="" />
-              </div>
-            </div>
-            <div class="col-md-5">
-              <h3 class="h2">
-                Surriscaldamento globale. Gli ingegneri di Cupertino iniziano la
-                loro opera
-              </h3>
-              <p>
-                Le <strong> previsioni scientifiche </strong>si avverano in anticipo di
-alcuni anni. Le <strong></strong>temperature globali</strong> si alzano di 3 gradi
-centigradi e il surriscaldamento è irreversibile. Il clima è
-sempre più ingestibile: le estati sono aride, gli inverni
-glaciali. In primavera alcuni ingegneri di Cupertino si
-riuniscono per discutere di un <strong>progetto edilizio</strong>
-chiamato OASIS               </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section>
-        <div class="container py-5">
-          <div class="row align-items-md-center">
-            <div class="col-md-5 text-center">
-              <img class="img-fluid" src="img/Image350.png" alt="" />
-            </div>
-            <div
-              class="
-                col-md-2
-                pt-5 pt-md-0
-                align-self-md-stretch
-                d-md-flex
-                flex-md-column
-                align-items-md-center
-                justify-content-between
-              "
-            >
-              <h2>2040</h2>
-              <div class="d-none d-md-block text-center">
-                <img class="img-fluid" src="img/Line.svg" alt="" />
-              </div>
-            </div>
-            <div class="col-md-5">
-              <h3 class="h2">
-                Temperature elevate,
-                aria pesante. Oasis
-                prende forma              </h3>
-              <p>
-                In dieci anni l'atmosfera diventa sempre più ricca di
-sostanze tossiche per l uomo. Molte città sono state
-decimate da malattie respiratorie dovute
-all'inquinamento o da tumori contratti a causa delle
-tossine nell'ambiente. Piccoli gruppi di persone
-decidono di migrare vicino alle fonti d'acqua. Inizia la
-costruzione di Oasis in un punto strategico: le uniche
-falde acquifere agibili nel mondo Occidentale.               </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section>
-        <div class="container py-5">
-          <div class="row flex-md-row-reverse align-items-md-center">
-            <div class="col-md-5 text-center">
-              <img class="img-fluid" src="img/Image350.png" alt="" />
-            </div>
-            <div
-              class="
-                col-md-2
-                pt-5 pt-md-0
-                align-self-md-stretch
-                d-md-flex
-                flex-md-column
-                align-items-md-center
-                justify-content-between
-              "
-            >
-              <h2>2050</h2>
-              <div class="d-none d-md-block text-center">
-                <img class="img-fluid" src="img/Line.svg" alt="" />
-              </div>
-            </div>
-            <div class="col-md-5">
-              <h3 class="h2">
-                Oasis è pronta ad
-                ospitare
-                i nomadi del Mondo
-                Esterno              </h3>
-              <p>
-                Oasis viene completata. Il mondo esterno è ormai
-                popolato solo da nomadi in cerca di un rifugio. Esistono
-                anche altre città-stato, ma si trovano tutte a miglia di
-                distanza l'una dall'altra. Gli obiettivi della nostra città
-                sono di garantire un futuro alle prossime generazioni e
-                la rendere possibile la ripopolazione del pianeta              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
+    
 
     <footer class="bg-secondary px-5">
       <!-- Logo -->
@@ -362,7 +190,7 @@ falde acquifere agibili nel mondo Occidentale.               </p>
       >
         <a class="nav-link" href="/index.html">Home</a>
         <a class="nav-link" href="/descrizione.html">Descrizione</a>
-        <a class="nav-link" href="/quartieri.html">Quartieri</a>
+        <a class="nav-link" href="/storia.html">Storia</a>
         <a class="nav-link" href="/servizi.html">Servizi</a>
         <a class="nav-link" href="/eventi.html">Eventi</a>
         <a class="nav-link" href="/unisciti.html">Unisciti a noi</a>
