aggiunta v2 servizi, modificato bg del testo hero

--- a/servizi.html
+++ b/servizi.html
@@ -141,63 +141,56 @@
 
     <main class="pb-5">
       <section
-        class="hero d-flex justify-content-center align-items-center"
-        id="hero-home"
+        class="hero d-flex align-items-center justify-content-start"
+        id="hero-storia"
       >
-        <div class="hero-content text-light text-center">
-          <h1 class="visually-hidden">Servizi</h1>
-          <h2 class="h1">I migliori servizi</h2>
+        <div class="hero-content bg-primary p-4 ps-5 text-light w-75">
+          <h1>I servizi migliori</h1>
           <p class="lead">
-            Da noi non esistono preoccupazioni. Ti proteggeremo sempre
+            Per farti dimenticare qualsiasi problema e renderti utile alla
+            nostra comunità
           </p>
         </div>
       </section>
 
       <section>
         <div class="container pt-5">
-          <div class="row gy-5 justify-content-around">
-            <div class="col-md d-flex justify-content-center">
-              <div class="h-100">
-                <img src="img/Image350.png" class="img-fluid" alt="..." />
-                <div>
-                  <h3>Benessere</h3>
-                  <p>
-                    Relax, tranquillità e pace dei sensi. OASIS è la città dove
-                    è impossibile essere tristi e lo dimostriamo con il nostro
-                    innovativo approccio psicologico. Non esistono problemi che
-                    non possano essere risolti da un caldo bagno termale o da
-                    uno dei nostri farmaci all’avanguardia
-                  </p>
-                </div>
-                <a href="/benessere.html" class="small-caps"
-                  >Scopri i nostri pacchetti
-                  <i class="bi-arrow-right fw-bold"></i>
-                </a>
+          <div class="row gy-5 gy-md-0 gx-md-5 justify-content-around">
+            <div class="col-md-5 d-flex flex-column justify-content-between">
+              <div>
+                <img src="img/Image455.png" class="img-fluid mb-4" alt="..." />
+
+                <h3>Benessere</h3>
+                <p>
+                  Relax, tranquillità e pace dei sensi. OASIS è la città dove è
+                  impossibile essere tristi e lo dimostriamo con il nostro
+                  innovativo approccio psicologico. Non esistono problemi che
+                  non possano essere risolti da un caldo bagno termale o da uno
+                  dei nostri farmaci all’avanguardia
+                </p>
               </div>
+              <a href="/benessere.html" class="small-caps"
+                >Scopri i nostri pacchetti
+                <i class="bi-arrow-right fw-bold"></i>
+              </a>
             </div>
 
-            <div class="col-md d-flex justify-content-center">
-              <div class="h-100">
-                <img
-                  style="object-fit: cover"
-                  src="img/Image350.png"
-                  class="img-fluid"
-                  alt="..."
-                />
-                <div>
-                  <h3>Formazione</h3>
-                  <p>
-                    Sperimenta, crea, comunica, ripara... OASIS ha bisogno delle
-                    tue abilità per crescere e ripopolare il Pianeta Terra. Ti
-                    indirizzeremo nella scuola giusta dopo averti sottoposto ad
-                    un test attitudinale per valutare i tuoi punti di forza.
-                  </p>
-                </div>
-                <a href="/istruzione.html" class="small-caps"
-                  >Scopri le nostre scuole
-                  <i class="bi-arrow-right fw-bold"></i>
-                </a>
+            <div class="col-md-5 d-flex flex-column justify-content-between">
+              <div>
+                <img src="img/Image455.png" class="img-fluid mb-4" alt="..." />
+
+                <h3>Formazione</h3>
+                <p>
+                  Sperimenta, crea, comunica, ripara... OASIS ha bisogno delle
+                  tue abilità per crescere e ripopolare il Pianeta Terra. Ti
+                  indirizzeremo nella scuola giusta dopo averti sottoposto ad un
+                  test attitudinale per valutare i tuoi punti di forza.
+                </p>
               </div>
+              <a href="/istruzione.html" class="small-caps"
+                >Scopri le nostre scuole
+                <i class="bi-arrow-right fw-bold"></i>
+              </a>
             </div>
           </div>
         </div>
