--- a/storia.html
+++ b/storia.html
@@ -142,7 +142,7 @@
         class="hero d-flex align-items-center justify-content-start"
         id="hero-storia"
       >
-        <div class="hero-content bg-dark p-4 ps-5 text-light w-75">
+        <div class="hero-content bg-primary p-4 ps-5 text-light w-75">
           <h1 class="h2">La nostra storia</h1>
           <h2 class="lead">
             Scopri la genesi dell’unica città che sopravviverà al tempo
