--- a/unisciti.html
+++ b/unisciti.html
@@ -147,7 +147,7 @@
         class="hero d-flex align-items-center justify-content-start"
         id="hero-home"
       >
-        <div class="hero-content bg-dark p-4 ps-5 text-light w-75">
+        <div class="hero-content bg-primary p-4 ps-5 text-light w-75">
           <h1 class="visually-hidden">Unisciti a noi</h1>
           <h2 class="h1">Ti senti cittadino di Oasis?</h2>
           <h3 class="lead">
