--- a/formazione.html
+++ b/formazione.html
@@ -116,8 +116,8 @@
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a href="istruzione.html" class="dropdown-item active"
-                      >Istruzione</a
+                    <a href="formazione.html" class="dropdown-item active"
+                      >Formazione</a
                     >
                   </li>
                   <li>
