--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a href="istruzione.html" class="dropdown-item"
-                      >Istruzione</a
+                    <a href="formazione.html" class="dropdown-item"
+                      >Formazione</a
                     >
                   </li>
                   <li>
