--- a/servizi.html
+++ b/servizi.html
@@ -118,8 +118,8 @@
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a href="istruzione.html" class="dropdown-item"
-                      >Istruzione</a
+                    <a href="formazione.html" class="dropdown-item"
+                      >Formazione</a
                     >
                   </li>
                   <li>
@@ -187,7 +187,7 @@
                   test attitudinale per valutare i tuoi punti di forza.
                 </p>
               </div>
-              <a href="/istruzione.html" class="small-caps"
+              <a href="/formazione.html" class="small-caps"
                 >Scopri le nostre scuole
                 <i class="bi-arrow-right fw-bold"></i>
               </a>
