--- a/eventi.html
+++ b/eventi.html
@@ -27,7 +27,7 @@
     >
       <div class="container-fluid">
         <!-- Logo -->
-        <a href="" class="mx-3 navbar_brand">
+        <a href="./index.html" class="mx-3 navbar_brand">
           <svg
             width="32"
             height="32"
@@ -210,7 +210,14 @@
                     </p>
                     <div><i class="bi-pin-angle-fill"></i> Via Monet, 3</div>
                     <div><i class="bi-watch"></i> 10:00 - 20:00</div>
-                    <button class="btn btn-primary mt-3" type="button" data-bs-toggle="modal" data-bs-target="#mymodal">Prenota</button>
+                    <button
+                      class="btn btn-primary mt-3"
+                      type="button"
+                      data-bs-toggle="modal"
+                      data-bs-target="#mymodal"
+                    >
+                      Prenota
+                    </button>
                   </div>
                 </div>
               </div>
@@ -234,9 +241,14 @@
                     </p>
                     <div><i class="bi-pin-angle-fill"></i> Via Zenzero, 14</div>
                     <div><i class="bi-watch"></i> 11:00</div>
-                    <button class="btn btn-primary mt-3" type="button"
+                    <button
+                      class="btn btn-primary mt-3"
+                      type="button"
                       data-bs-toggle="modal"
-                      data-bs-target="#mymodal">Prenota</button>
+                      data-bs-target="#mymodal"
+                    >
+                      Prenota
+                    </button>
                   </div>
                 </div>
               </div>
@@ -260,9 +272,14 @@
                     </p>
                     <div><i class="bi-pin-angle-fill"></i> Via Abba, 21</div>
                     <div><i class="bi-watch"></i> 20:00 - 00:00</div>
-                    <button class="btn btn-primary mt-3" type="button"
+                    <button
+                      class="btn btn-primary mt-3"
+                      type="button"
                       data-bs-toggle="modal"
-                      data-bs-target="#mymodal">Prenota</button>
+                      data-bs-target="#mymodal"
+                    >
+                      Prenota
+                    </button>
                   </div>
                 </div>
               </div>
@@ -286,9 +303,14 @@
                     </p>
                     <div><i class="bi-pin-angle-fill"></i> Via Giallo, 10</div>
                     <div><i class="bi-watch"></i> 11:00</div>
-                    <button class="btn btn-primary mt-3" type="button"
+                    <button
+                      class="btn btn-primary mt-3"
+                      type="button"
                       data-bs-toggle="modal"
-                      data-bs-target="#mymodal">Prenota</button>
+                      data-bs-target="#mymodal"
+                    >
+                      Prenota
+                    </button>
                   </div>
                 </div>
               </div>
@@ -312,9 +334,14 @@
                     </p>
                     <div><i class="bi-pin-angle-fill"></i> Via Monti</div>
                     <div><i class="bi-watch"></i> 24h</div>
-                    <button class="btn btn-primary mt-3" type="button"
+                    <button
+                      class="btn btn-primary mt-3"
+                      type="button"
                       data-bs-toggle="modal"
-                      data-bs-target="#mymodal">Prenota</button>
+                      data-bs-target="#mymodal"
+                    >
+                      Prenota
+                    </button>
                   </div>
                 </div>
               </div>
