--- a/index.html
+++ b/index.html
@@ -138,17 +138,25 @@
     </header>
 
     <main>
+      <!-- Hero -->
       <section
         class="hero d-flex justify-content-center align-items-center"
         id="hero-home"
       >
-        <div class="hero-content text-light text-center">
+        <!-- d-flex
+            flex-column
+            justify-content-center
+            align-items-center -->
+        <div class="text-light bg-primary text-center">
           <h1 class="display-1">Oasis</h1>
           <h2 class="lead">La culla del tuo futuro</h2>
-          <button class="btn btn-primary mt-3">Unisciti a noi</button>
+          <div>
+            <button class="btn btn-secondary mt-3">Unisciti a noi</button>
+          </div>
         </div>
       </section>
 
+      <!-- Descrizione -->
       <section>
         <div class="container py-5">
           <div class="row align-items-center gy-5 gx-5">
@@ -181,6 +189,7 @@
         </div>
       </section>
 
+      <!-- Storia -->
       <section>
         <div class="container py-5">
           <h2 class="text-secondary">Scopri i quartieri di Oasis</h2>
@@ -277,6 +286,7 @@
         </div>
       </section>
 
+      <!-- Servizi -->
       <section class="bg-secondary-variant1">
         <div class="container text-light p-5">
           <div class="text-nowrap overflow-auto composition-servizi">
@@ -332,6 +342,7 @@
         </div>
       </section>
 
+      <!-- Eventi -->
       <section>
         <div class="container py-5">
           <div class="d-flex justify-content-center">
@@ -386,6 +397,7 @@
         </div>
       </section>
 
+      <!-- Unisciti -->
       <section class="bg-primary">
         <div class="container py-5">
           <div class="d-flex flex-column align-items-center">
