added overlay to home hero

--- a/index.html
+++ b/index.html
@@ -143,11 +143,17 @@
         class="hero d-flex justify-content-center align-items-center"
         id="hero-home"
       >
-        <!-- d-flex
+        <div
+          class="
+            hero-content
+            d-flex
             flex-column
             justify-content-center
-            align-items-center -->
-        <div class="text-light bg-primary text-center">
+            align-items-center
+            text-light text-center
+            bg-opacity-50
+          "
+        >
           <h1 class="display-1">Oasis</h1>
           <h2 class="lead">La culla del tuo futuro</h2>
           <div>
